--- a/minesweeper/pom.xml
+++ b/minesweeper/pom.xml
@@ -57,6 +57,9 @@
         </repository>
     </repositories>
 
+    <dependencies>
+    </dependencies>
+
     <pluginRepositories>
         <pluginRepository>
             <id>alimaven</id>
